--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <description>ssmu-api</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.organization>daco</sonar.organization>
+        <sonar.projectkey>Alejandro-XIII_back</sonar.projectkey>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
